--- a/package.json
+++ b/package.json
@@ -19,5 +19,5 @@
   "bugs": {
     "url": "https://gitlab.com/mwa28/DataConsult-Testing/issues"
   },
-  "homepage": "https://gitlab.com/mwa28/DataConsult-Testing#README",
+  "homepage": "https://gitlab.com/mwa28/DataConsult-Testing#README"
 }
