Seperated app and test

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "directories": {
     "test": "test",
-    "static": "static"
+    "app": "app"
   },
   "scripts": {
     "test": "node main.js"
