--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "main.js",
   "directories": {
     "test": "test",
-    "static": "static"
+    "app": "app"
   },
   "scripts": {
-    "test": "node test/jsdom.js"
+    "test": "karma start"
   },
   "repository": {
     "type": "git",
@@ -21,8 +21,14 @@
   },
   "homepage": "https://gitlab.com/mwa28/DataConsult-Testing#README",
   "devDependencies": {
+    "chart.js": "^2.7.2",
+    "html2canvas": "^1.0.0-alpha.12",
     "jquery": "^3.3.1",
     "jsdom": "^11.11.0",
+    "karma": "^2.0.4",
+    "karma-jquery": "^0.2.3",
+    "karma-jsdom-launcher": "^6.1.3",
+    "karma-qunit": "^2.1.0",
     "qunit": "^2.6.1"
   }
 }
