--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.3.1",
     "jsdom": "^11.11.0",
     "karma": "^2.0.4",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-jquery": "^0.2.3",
     "karma-jsdom-launcher": "^6.1.3",
     "karma-qunit": "^2.1.0",
