--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "dataconsult-testing",
   "version": "1.0.0",
   "description": "Web Testing Models for https://msp.dcgroup.com",
-  "main": "main.js",
+  "main": "app/app.js",
   "directories": {
     "test": "test",
     "app": "app"
   },
   "scripts": {
-    "test": "node main.js"
+    "test": "qunit test/test.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,18 @@
   "bugs": {
     "url": "https://gitlab.com/mwa28/DataConsult-Testing/issues"
   },
-  "homepage": "https://gitlab.com/mwa28/DataConsult-Testing#README"
+  "homepage": "https://gitlab.com/mwa28/DataConsult-Testing#README",
+  "devDependencies": {
+    "canvas-prebuilt": "^1.6.5-prerelease.1",
+    "chart.js": "^2.7.2",
+    "html2canvas": "^1.0.0-alpha.12",
+    "jquery": "^3.3.1",
+    "jsdom": "^11.11.0",
+    "karma": "^2.0.4",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jquery": "^0.2.3",
+    "karma-jsdom-launcher": "^6.1.3",
+    "karma-qunit": "^2.1.0",
+    "qunit": "^2.6.1"
+  }
 }
