--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dataconsult-testing",
   "version": "1.0.0",
   "description": "Web Testing Models for https://msp.dcgroup.com",
-  "main": "main.js",
+  "main": "test.js",
   "directories": {
     "test": "test",
     "app": "app"
@@ -21,14 +21,11 @@
   },
   "homepage": "https://gitlab.com/mwa28/DataConsult-Testing#README",
   "devDependencies": {
-    "chart.js": "^2.7.2",
-    "html2canvas": "^1.0.0-alpha.12",
     "jquery": "^3.3.1",
     "jsdom": "^11.11.0",
     "karma": "^2.0.4",
     "karma-chrome-launcher": "^2.2.0",
     "karma-jquery": "^0.2.3",
-    "karma-jsdom-launcher": "^6.1.3",
     "karma-qunit": "^2.1.0",
     "qunit": "^2.6.1"
   }
