--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
   "homepage": "https://gitlab.com/mwa28/DataConsult-Testing#README",
   "devDependencies": {
     "canvas-prebuilt": "^1.6.5-prerelease.1",
+    "electron": "^2.0.5",
     "jquery": "^3.3.1",
     "jsdom": "^11.11.0",
     "karma": "^2.0.4",
+    "karma-electron-launcher": "^0.2.0",
     "karma-jquery": "^0.2.3",
-    "karma-jsdom-launcher": "^6.1.3",
     "karma-qunit": "^2.1.0",
     "qunit": "^2.6.1"
   }
