--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "cucumber": "^4.2.1",
     "jquery": "^3.3.1",
     "jsdom": "^11.11.0",
-    "moment": "^2.22.2",
-    "qunit": "^2.6.1"
+    "moment": "^2.22.2"
   }
 }
